fixed swagger & add endpoint patch job
